examples/test/testpolicy5577.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5577
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key43: value13
      key29: value34
      key31: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value10
          key33: value31
          key30: value17
